# aws-cloud-security-governance-platform

./: .editorconfig  .gitignore  LICENSE  README.md  pyproject.toml
.github/: CODEOWNERS  dependabot.yml
.github/workflows/: security-ci.yml
docs/: architecture.md  control-mapping.md  decision-log.md  incident-response.md  leadership-operating-model.md  troubleshooting-journal.md  troubleshooting.md
lambda/: remediate_public_s3.py
scripts/: test-event.ps1  validate.ps1
terraform/: .terraform.lock.hcl  main.tf  outputs.tf  providers.tf  terraform.tfvars.example  variables.tf  versions.tf
terraform/modules/identity-governance/: main.tf  outputs.tf  variables.tf
terraform/modules/organization-guardrails/: main.tf  outputs.tf  variables.tf
terraform/modules/security-operations/: main.tf  outputs.tf  variables.tf
tests/: test_remediation.py
tests/fixtures/: security_hub_s3_finding.json
